--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^9.4.2",
+    "@splinetool/react-spline": "^4.1.0",
     "gsap": "^3.13.0",
     "next": "16.0.7",
     "ogl": "^1.0.11",
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.181.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
